# PlantOS-Rust-SDK-Full

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  i686-unknown-plantos.json  run.sh
img/: Powerint_DOS_386.img
libc/: Cargo.toml
libc/src/: lib.rs
libc/src/plantos/: mod.rs
prtl/: debug_config.h  errno-loc.c  memrchr.c  syscall.c  unwind.c
ptl/: debug_config.h  errno-loc.c  memrchr.c  syscall.c  unwind.c
src/: boot.c  lib.rs
src/example/: mod.rs
